notes 2017-12-20